<resources>
    <string name="app_name">sysuBBSproject</string>
    <string name="title_home">首页</string>
    <string name="title_navigation_post">发布</string>
    <string name="title_navigation_messages">消息</string>
    <string name="title_navigation_menu">我的</string>

    <string name="photos_num">%1$d张</string>
    <string name="msg_no_camera">没找到摄像头</string>
    <string name="msg_maxi_capacity">已达到照片选择上限</string>
    <string name="commit">确定</string>
    <string name="commit_num">确定(%1$d/%2$d)</string>
    <string name="only_choose_num">超出可选图片张数</string>
    <string name="finish">完成(%1$d/9)</string>

    <string name="string_8">达可达可</string>
    <string name="string_11">达可达可</string>
    <string name="go_to_login">我要登录</string>
    <string name="now_sign">注册</string>
    <string name="now_login">登录</string>
    <string name="has_no_account">没有账号?</string>

    <string name="message_1">树洞</string>
    <string name="message_2">招募</string>
    <string name="message_3">课程评价</string>
    <string name="message_4">资料分享</string>
    <string name="message_5">闲置</string>
    <string name="message_6">失物招领</string>
</resources>