<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.sysubbsproject.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_post"
        android:name="com.example.sysubbsproject.ui.post.PostFragment"
        android:label="@string/title_navigation_post"
        tools:layout="@layout/fragment_navigation_post" />

    <fragment
        android:id="@+id/navigation_messages"
        android:name="com.example.sysubbsproject.ui.messages.MessagesFragment"
        android:label="@string/title_navigation_messages"
        tools:layout="@layout/fragment_messages" />
    <fragment
        android:id="@+id/navigation_my_menu"
        android:name="com.example.sysubbsproject.ui.menu.MenuFragment"
        android:label="@string/title_navigation_messages"
        tools:layout="@layout/fragment_my_menu" />
</navigation>