<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginTop="0dp"
    android:background="@color/theme_green_1"
    tools:context=".ui.post.PostFragment">
        <androidx.cardview.widget.CardView
            android:layout_marginTop="10dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:id="@+id/card_login"
            android:foreground="?attr/selectableItemBackground"
            app:cardBackgroundColor="@android:color/white"
            app:cardCornerRadius="@dimen/twelve_dp"
            app:cardElevation="@dimen/twelve_dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHeight_percent="0.4"
            app:layout_constraintWidth_percent="0.7">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:textColor="@color/black"
                    android:textFontWeight="20"
                    android:text="帖子标签">
                </TextView>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center">

                    <androidx.cardview.widget.CardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        >
                        <com.google.android.material.chip.Chip
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/messageLabel_1"
                            style="@style/Widget.MaterialComponents.Chip.Choice"
                            android:text="@string/message_1"
                            android:textSize="12sp"
                            />
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        >
                        <com.google.android.material.chip.Chip
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/messageLabel_2"
                            android:text="@string/message_2"
                            android:textSize="12sp"
                            style="@style/Widget.MaterialComponents.Chip.Choice"/>
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        >
                        <com.google.android.material.chip.Chip
                            android:layout_width="wrap_content"
                            android:id="@+id/messageLabel_3"
                            android:layout_height="wrap_content"
                            android:text="@string/message_3"
                            android:textSize="12sp"
                            style="@style/Widget.MaterialComponents.Chip.Choice"/>
                    </androidx.cardview.widget.CardView>
                    <androidx.cardview.widget.CardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        >
                        <com.google.android.material.chip.Chip
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/message_4"
                            android:textSize="12sp"
                            android:id="@+id/messageLabel_4"
                            style="@style/Widget.MaterialComponents.Chip.Choice"/>
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        >
                        <com.google.android.material.chip.Chip
                            android:layout_width="wrap_content"
                            android:id="@+id/messageLabel_5"
                            android:layout_height="wrap_content"
                            android:text="@string/message_5"
                            style="@style/Widget.MaterialComponents.Chip.Choice"
                            android:textSize="12sp"/>
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        >
                        <com.google.android.material.chip.Chip
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/message_6"
                            android:id="@+id/messageLabel_6"
                            style="@style/Widget.MaterialComponents.Chip.Choice"
                            android:textSize="12sp"/>
                    </androidx.cardview.widget.CardView>
                </LinearLayout>

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:id="@+id/post_cardview"
            android:foreground="?attr/selectableItemBackground"
            app:cardBackgroundColor="@android:color/white"
            app:cardCornerRadius="@dimen/twelve_dp"
            app:cardElevation="@dimen/twelve_dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHeight_percent="0.4"
            app:layout_constraintWidth_percent="0.7">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_marginTop="5dp"
                android:layout_height="50dp">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/post_title"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:hint="请输入标题">
                </com.google.android.material.textfield.TextInputEditText>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="55dp">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:id="@+id/post_text"
                    android:layout_height="215dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:background="@color/white"
                    android:color="@color/white"
                    android:gravity="top|start"
                    android:hint="这一刻的想法…"
                    android:maxLines="15"
                    android:outlineAmbientShadowColor="@color/white"
                    android:outlineSpotShadowColor="@color/white"
                    android:scrollbars="vertical"
                    android:singleLine="false" />

                <GridView
                    android:id="@+id/noScrollgridview"
                    android:layout_width="match_parent"
                    android:layout_height="270dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:horizontalSpacing="3dp"
                    android:numColumns="3"
                    android:scrollbars="none"
                    android:verticalSpacing="5dp" >
                </GridView>
            </com.google.android.material.textfield.TextInputLayout>
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp">

            <Button
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="100dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="100dp"
                android:layout_weight="2"
                android:background="@drawable/button_shape"
                android:text="发布" />
        </LinearLayout>
</LinearLayout>
