<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/colorPrimary">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:id="@+id/fragment_login_2"
            android:layout_height="match_parent"
            android:background="?attr/colorPrimary">


            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:id="@+id/card_login_2"
                android:clickable="true"
                android:foreground="?attr/selectableItemBackground"
                app:cardBackgroundColor="@android:color/white"
                app:cardCornerRadius="@dimen/twelve_dp"
                app:cardElevation="@dimen/twelve_dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintHeight_percent="0.4"
                app:layout_constraintWidth_percent="0.7">


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/title_welcome"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:gravity="center"
                        android:padding="@dimen/sixteen_dp"
                        android:text="@string/string_8"
                        android:textColor="?attr/colorPrimary"
                        android:textSize="17sp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_below="@id/title_welcome"
                        android:layout_centerInParent="true"
                        android:id="@+id/center_rela_2"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="20dp"
                            android:layout_marginEnd="20dp"
                            android:layout_marginTop="30dp"
                            android:id="@+id/login_username"
                            android:color="@color/white"
                            android:gravity="top|start"
                            android:hint="请输入用户名"
                            android:maxLines="1" />

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_below="@id/login_username"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="20dp"
                            android:layout_marginEnd="20dp"
                            android:layout_marginTop="30dp"
                            android:id="@+id/login_password"
                            android:color="@color/white"
                            android:gravity="top|start"
                            android:hint="请输入密码"
                            android:maxLines="1" />

                        <androidx.cardview.widget.CardView
                            android:layout_width="100dp"
                            android:layout_height="40dp"
                            android:layout_marginTop="25dp"
                            android:id="@+id/confirm_login"
                            android:clickable="true"
                            android:layout_marginStart="90dp"
                            android:foreground="?attr/selectableItemBackground"
                            android:layout_marginEnd="@dimen/tweenty_four_dp"
                            android:layout_marginBottom="@dimen/sixteen_dp"
                            app:cardCornerRadius="@dimen/twelve_dp"
                            app:cardElevation="@dimen/twelve_dp"
                            app:cardBackgroundColor="?attr/colorPrimary">


                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:text="@string/now_login"
                                android:textColor="@android:color/white"
                                android:textSize="13sp" />
                        </androidx.cardview.widget.CardView>


                    </LinearLayout>


                </RelativeLayout>
            </androidx.cardview.widget.CardView>


        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:visibility="invisible"
            android:id="@+id/fragment_sign_2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?attr/colorPrimary">

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:id="@+id/card_sign_2"
                android:clickable="true"
                android:foreground="?attr/selectableItemBackground"
                app:cardBackgroundColor="@android:color/white"
                app:cardCornerRadius="@dimen/twelve_dp"
                app:cardElevation="@dimen/twelve_dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintHeight_percent="0.4"
                app:layout_constraintWidth_percent="0.7">


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/title_welcome_2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:gravity="center"
                        android:padding="@dimen/sixteen_dp"
                        android:text="@string/string_8"
                        android:textColor="?attr/colorPrimary"
                        android:textSize="17sp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_below="@id/title_welcome_2"
                        android:layout_centerInParent="true"
                        android:id="@+id/center_rela_2_sign"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="20dp"
                            android:layout_marginEnd="20dp"
                            android:layout_marginTop="30dp"
                            android:id="@+id/regist_username"
                            android:color="@color/white"
                            android:gravity="top|start"
                            android:hint="请输入用户名"
                            android:maxLines="1" />

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_below="@id/regist_username"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="20dp"
                            android:layout_marginEnd="20dp"
                            android:layout_marginTop="30dp"
                            android:id="@+id/regist_password"
                            android:color="@color/white"
                            android:gravity="top|start"
                            android:hint="请输入密码"
                            android:maxLines="1" />

                        <androidx.cardview.widget.CardView
                            android:layout_width="100dp"
                            android:layout_height="40dp"
                            android:layout_marginTop="25dp"
                            android:id="@+id/confirm_sign"
                            android:clickable="true"
                            android:layout_marginStart="90dp"
                            android:foreground="?attr/selectableItemBackground"
                            android:layout_marginEnd="@dimen/tweenty_four_dp"
                            android:layout_marginBottom="@dimen/sixteen_dp"
                            app:cardCornerRadius="@dimen/twelve_dp"
                            app:cardElevation="@dimen/twelve_dp"
                            app:cardBackgroundColor="?attr/colorPrimary">


                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:text="@string/now_sign"
                                android:textColor="@android:color/white"
                                android:textSize="13sp" />
                        </androidx.cardview.widget.CardView>


                    </LinearLayout>


                </RelativeLayout>
            </androidx.cardview.widget.CardView>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>

